# areweasyncyet.rs

./: .gitignore  .travis.yml  CNAME  Cargo.toml  LICENSE-APACHE  README.md  data.yml  index.html  main.js  posts.yml  style.css
.github/workflows/: pages.yml
graphql/: schema.graphql
graphql/query/: issue_or_pr.graphql  issues_with_label.graphql  latest_tag.graphql
src/: fetcher.rs  main.rs  posts.rs
src/data/: input.rs  internal.rs  mod.rs  output.rs  rfc.rs  rustc_version.rs
src/index/: mod.rs  rfc.rs  rustc_version.rs  testers.rs
src/page_gen/: filters.rs  mod.rs  testers.rs
src/query/: issue_or_pr.rs  issues_with_label.rs  latest_tag.rs  mod.rs
static/: style.css
templates/: index.html  macros.html
