[package]
name = "areweasyncyet"
version = "0.1.0"
authors = ["Xidorn Quan <me@upsuper.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[dependencies]
chrono = "0.4.6"
dotenv = "0.14.1"
env_logger = "0.7.0"
graphql_client = "0.8.0"
log = "0.4.6"
matches = "0.1.8"
once_cell = "1.2.0"
regex = "1.1.6"
reqwest = "0.9.16"
semver = "0.9.0"
serde = { version = "1.0.91", features = ["derive"] }
serde_derive = "1.0.91"
serde_json = "1.0.39"
serde_with = "1.3.1"
serde_yaml = "0.8.9"
tera = "0.11.20"
