[package]
name = "areweasyncyet"
version = "0.1.0"
authors = ["Xidorn Quan <me@upsuper.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
chrono = "0.4.6"
dotenv = "0.14.1"
env_logger = "0.7.0"
futures-util = "0.3.1"
graphql_client = "0.8.0"
lazy_static = "1.3.0"
log = "0.4.6"
matches = "0.1.8"
regex = "1.1.6"
reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
semver = "0.9.0"
serde = { version = "1.0.91", features = ["derive"] }
serde_derive = "1.0.91"
serde_json = "1.0.39"
serde_with = "1.3.1"
serde_yaml = "0.8.9"
tera = "0.11.20"
tokio = { version = "0.2.0-alpha.6", default-features = false, features = ["rt-full"] }
